(07/24/2006)

*** Replaced the broken DeferredCommitHashSet.

*** Added Status.isTerminal()

-------------------------------2.1----------------------------------

(04/18/2006)

*** Added support for partial transfers

*** Removed commons-logging.jar. It was not used here

(04/06/2006)

*** Made the file resource cache timer a daemon

*** Added JobSpecification.isDelegationEnabled() and
    setDelegationEnabled(boolean)
	
*** Fixed 3rd party transfers. The file name would be appended to
    the host without the separating slash.

(11/23/2005)

*** Rewrote part of the generic transfer handler. It now covers a few more cases
    such as ssh to gridftp and back transfers. It also avoids temporary files
	when not needed
	
*** Added Task.waitFor(); it blocks until the task completes/failes/is canceled

(09/30/2005) 	Removed the old sandboxing strategy. The new one allows for 
		concurrent requests. The context class loader is changed before a call
		then restored after a call to a sandboxed class.
		
				Updated the caching file handler to always release resources
		after being done.
		
				Added the trap logic to the factory in order to detect possibly
		improper class path settings.

(09/08/2005) 	Updated the castor jar to version 0.9.6

(08/27/2005) 	Improved the Javadoc comments of the abstractions interfaces 

(08/23/2005) 	Fixed Bug: 
		http://www.cogkit.org/bugzilla/show_bug.cgi?id=32 

(06/24/2005) 	Updated the thirdparty file transfer logic to get proper 
		status notification on transfer COMPLETE in 
		org.globus.cog.abstraction.impl.fileTransfer.DelegatedFileTransferHandler.java

(06/08/2005) 	Added support for service attributes in service.xsd schema and
		org.globus.cog.abstraction.impl.xml package

(06/08/2005) 	Added support for JobManager abstractions in 
		org.globus.cog.abstraction.interfaces.ExecutionService.java and
                org.globus.cog.abstraction.impl.common.task.ExecutionServiceImpl.java 
