@@ -1,5 +1,70 @@
 <project name="Launchers" default="create" basedir=".">
 	<target name="create">
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cogrun"/>
+		<property name="class-name" value="org.globus.cog.abstraction.tools.execution.JobSubmission"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-job-submit"/>
+		<property name="class-name" value="org.globus.cog.abstraction.tools.execution.JobSubmission"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-file-operation"/>
+		<property name="class-name" value="org.globus.cog.abstraction.examples.file.FileOperation"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-file-transfer"/>
+		<property name="class-name" value="org.globus.cog.abstraction.tools.transfer.FileTransfer"/>
+	  </ant>
+	  
+	  <ant antfile="${main.buildfile}" target="example.launcher">
+		<property name="launcher-name" value="hierarchical-queue-handler"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.queue.HierarchicalQueue"/>
+		<property name="launcher-dir" value="examples"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="example.launcher">
+		<property name="launcher-name" value="hierarchical-set-handler"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.set.HierarchicalSet"/>
+		<property name="launcher-dir" value="examples"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-task2xml"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.xml.Task2XML"/>
+	  </ant>
+
+
+	  <ant antfile="${main.buildfile}" target="example.launcher">
+		<property name="launcher-name" value="taskgraph-2-xml"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.xml.TaskGraph2XML"/>
+		<property name="launcher-dir" value="examples"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-checkpoint-submit"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.xml.XML2Task"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-checkpoint-status"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.xml.CheckpointStatus"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="example.launcher">
+		<property name="launcher-name" value="xml-2-taskgraph"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.xml.XML2TaskGraph"/>
+		<property name="launcher-dir" value="examples"/>
+	  </ant>
+
+	  <ant antfile="${main.buildfile}" target="launcher">
+		<property name="launcher-name" value="cog-info"/>
+		<property name="class-name"    value="org.globus.cog.abstraction.examples.etc.CogInfo"/>
+	  </ant>
+
 	</target>
 	<target name="webstart">
 	</target>
